<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cal"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="43dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="502dp"
        android:scrollbarSize="30dp"
        android:text="@string/calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/white"
        android:text="@string/Result"
        android:textAlignment="center"
        android:textColorLink="#673AB7"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsum"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#808"
        android:text="@string/addition"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btnsub"
        app:layout_constraintEnd_toStartOf="@+id/btnsub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvresult"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#808"
        android:text="@string/subtraction"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/btnsum"
        app:layout_constraintEnd_toStartOf="@+id/btndiv"
        app:layout_constraintStart_toEndOf="@id/btnsum"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#808"
        android:text="@string/division"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/btnmod"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="@id/btnsub"
        app:layout_constraintTop_toBottomOf="@+id/tvresult" />

    <Button
        android:id="@+id/btnmod"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#808"
        android:text="@string/modulus"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toEndOf="@+id/btndiv"
        app:layout_constraintTop_toBottomOf="@+id/tvresult" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilnum1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etnum1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_num1"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilnum2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilnum1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etnum2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_num2"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>